--- a/src/app/exemple/exemple.component.html
+++ b/src/app/exemple/exemple.component.html
@@ -1,77 +1,123 @@
-<!-- Section: Design Block -->
-<section class="">
-
-  
-          <div class="col-lg-6 mb-5 mb-lg-0">
-            <div class="card">
-              <div class="card-body py-5 px-md-5">
-                <form>
-                  <!-- 2 column grid layout with text inputs for the first and last names -->
-                  <div class="row">
-                    <div class="col-md-6 mb-4">
-                        <mat-form-field class="example-full-width">
-                            <input matInput placeholder="Username">
-                          </mat-form-field>
-
-                    </div>
-                    <div class="col-md-6 mb-4">
-                      <div class="form-outline">
-                        <input type="text" id="form3Example2" class="form-control" />
-                        <label class="form-label" for="form3Example2">Last name</label>
-                      </div>
-                    </div>
+<div class="about mt-125">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col-md-6">
+              <div class="about-img">
+                  <div class="about-img-1">
+                      <img src="../../assets/cerceau-de-fleurs-mariage-1632919447.jpg" alt="Image">
                   </div>
-  
-                  <!-- Email input -->
-                  <div class="form-outline mb-4">
-                    <input type="email" id="form3Example3" class="form-control" />
-                    <label class="form-label" for="form3Example3">Email address</label>
+                  <div class="about-img-2">
+                      <img src="../../assets/configuration-decoration-mariage-evenement-heure-ete-plein-air_146935-7.webp" alt="Image">
                   </div>
-  
-                  <!-- Password input -->
-                  <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4" class="form-control" />
-                    <label class="form-label" for="form3Example4">Password</label>
-                  </div>
-  
-                  <!-- Checkbox -->
-                  <div class="form-check d-flex justify-content-center mb-4">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                    <label class="form-check-label" for="form2Example33">
-                      Subscribe to our newsletter
-                    </label>
-                  </div>
-  
-                  <!-- Submit button -->
-                  <button type="submit" class="btn btn-primary btn-block mb-4">
-                    Sign up
-                  </button>
-  
-                  <!-- Register buttons -->
-                  <div class="text-center">
-                    <p>or sign up with:</p>
-                    <button type="button" class="btn btn-link btn-floating mx-1">
-                      <i class="fab fa-facebook-f"></i>
-                    </button>
-  
-                    <button type="button" class="btn btn-link btn-floating mx-1">
-                      <i class="fab fa-google"></i>
-                    </button>
-  
-                    <button type="button" class="btn btn-link btn-floating mx-1">
-                      <i class="fab fa-twitter"></i>
-                    </button>
-  
-                    <button type="button" class="btn btn-link btn-floating mx-1">
-                      <i class="fab fa-github"></i>
-                    </button>
-                  </div>
-                </form>
               </div>
-            </div>
           </div>
+          <div class="col-md-6">
+              <div class="section-header">
+                  <p>Learn About Us</p>
+                  <h2>25 Years Experience</h2>
+              </div>
+              <div class="about-text">
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
+                  </p>
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
+                  </p>
+                  <a class="btn" href="">Learn More</a>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+<!-- About End -->
 
-    <!-- Jumbotron -->
-  </section>
-  <!-- Section: Design Block -->
-  
+
+<!-- Feature Start -->
+<div class="feature">
+  <div class="container">
+      <div class="row align-items-end">
+          <div class="col-md-6">
+              <div class="feature-img">
+                  <img src="../../assets/istockphoto-498323493-612x612.jpg" alt="Image">
+              </div>
+          </div>
+          <div class="col-md-6">
+              <div class="section-header">
+                  <p>Our Feature</p>
+                  <h2>Why Choose Us?</h2>
+              </div>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus 
+              </p>
+              <div class="row counters">
+                  <div class="col-6">
+                      <i class="fa fa-user"></i>
+                      <div class="counters-text">
+                          <h2 data-toggle="counter-up">100</h2>
+                          <p>Our Staffs</p>
+                      </div>
+                  </div>
+                  <div class="col-6">
+                      <i class="fa fa-users"></i>
+                      <div class="counters-text">
+                          <h2 data-toggle="counter-up">200</h2>
+                          <p>Our Clients</p>
+                      </div>
+                  </div>
+                  <div class="col-6">
+                      <i class="fa fa-check"></i>
+                      <div class="counters-text">
+                          <h2 data-toggle="counter-up">300</h2>
+                          <p>Completed Projects</p>
+                      </div>
+                  </div>
+                  <div class="col-6">
+                      <i class="fa fa-running"></i>
+                      <div class="counters-text">
+                          <h2 data-toggle="counter-up">400</h2>
+                          <p>Running Projects</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+<!-- Feature End -->
+
+
+      <!-- Fact Start -->
+      <div class="fact">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-3 col-md-6">
+                    <div class="fact-item">
+                        <img src="../../assets/icon-4.png" alt="Icon">
+                        <h2>Qualified Team</h2>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="fact-item">
+                        <img src="../../assets/icon-1.png" alt="Icon">
+                        <h2>Individual Approach</h2>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="fact-item">
+                        <img src="../../assets/icon-8.png" alt="Icon">
+                        <h2>100% Success</h2>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="fact-item">
+                        <img src="../../assets/icon-6.png" alt="Icon">
+                        <h2>100% Satisfaction</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fact Start -->
+    
+
+
