--- a/src/app/customer/navbar-cus/navbar-cus.component.html
+++ b/src/app/customer/navbar-cus/navbar-cus.component.html
@@ -1,60 +1,38 @@
-<mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
-        <div class="form-group mb-0" [ngClass]="{ 'focused': focus === true }">
-          <div class="input-group input-group-alternative">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-search"></i></span>
-            </div>
-            <input class="form-control" placeholder="Search" type="text" (focus)="focus = true"
-            (blur)="focus = false">
-          </div>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <button mat-icon-button (click)="toggleSideBar()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <span> Avatar Booking </span>
+
+        <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
+            <ul fxLayout="row" fxLayoutGap="20px">
+                <li>
+                    <button mat-icon-button type="button"  data-mdb-toggle="tooltip" data-mdb-placement="bottom" title="setting">
+                        <mat-icon>settings</mat-icon>
+                      </button>
+
+
+                </li>
+                <li>
+                    <button mat-icon-button type="button"  data-mdb-toggle="tooltip" data-mdb-placement="bottom" title="help">
+                        <mat-icon>help_outline</mat-icon>
+                    </button>
+                </li>
+                <li>
+                    <button mat-button [matMenuTriggerFor]="menu">
+                        <mat-icon>person_outline</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item>
+                            <mat-icon>exit_to_app</mat-icon>
+                            Sign out
+                        </button>
+                    </mat-menu>
+
+                </li>
+            </ul>
         </div>
-      </form>
-      <!-- User -->
-      <ul class="navbar-nav align-items-center d-none d-md-flex">
-        <li class="nav-item" ngbDropdown placement="bottom-right">
-          <a class="nav-link pr-0" role="button" ngbDropdownToggle>
-            <div class="media align-items-center">
-              <span class="avatar avatar-sm rounded-circle">
-                <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
-              </span>
-              <div class="media-body ml-2 d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">Jessica Jones</span>
-              </div>
-            </div>
-          </a>
-          <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
-            <div class=" dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
-            </div>
-            <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
-              <i class="ni ni-single-02"></i>
-              <span>My profile</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
-              <i class="ni ni-settings-gear-65"></i>
-              <span>Settings</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
-              <i class="ni ni-calendar-grid-58"></i>
-              <span>Activity</span>
-            </a>
-            <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
-              <i class="ni ni-support-16"></i>
-              <span>Support</span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a href="#!" class="dropdown-item">
-              <i class="ni ni-user-run"></i>
-              <span>Logout</span>
-            </a>
-          </div>
-        </li>
-      </ul>
-    
-  </mat-toolbar>
+    </mat-toolbar-row>
+</mat-toolbar>
